crates/backends/postgres/tests/snapshots/postgres__aggregates_markdown.snap
---
source: crates/backends/postgres/tests/postgres.rs
expression: markdown
---
# Database: `aggregates`

## Database

### `dbmd_test_97d6c320c70be050`

**Owner:** `postgres`

**Encoding:** `UTF8`

**Locale provider:** `libc`

**LC_COLLATE:** `en_US.utf8`

**LC_CTYPE:** `en_US.utf8`

**Tablespace:** `pg_default`

**Template:** no

**Allows connections:** yes

**Connection limit:** -1



## Namespaces

| Name | Owner | Comment |
|---|---|---|
| `aggregates` | `postgres` | - |
| `public` | `pg_database_owner` | standard public schema |


## Functions

### `aggregates.collect_integer(state integer[], value integer)`

**Kind:** `ordinary`

**Arguments:** `state integer[], value integer`

**Returns:** `integer[]`

**Owner:** `postgres`

**Language:** `sql`

**Volatility:** `immutable`

**Parallel:** `safe`

**Security:** `invoker`

**Null input:** called

**Leakproof:** no

**Returns set:** no

**Cost:** 100

```sql
CREATE OR REPLACE FUNCTION aggregates.collect_integer(state integer[], value integer)
 RETURNS integer[]
 LANGUAGE sql
 IMMUTABLE PARALLEL SAFE
RETURN array_append(state, value)

```


### `aggregates.hypothetical_position(state integer[], hypothetical integer)`

**Kind:** `ordinary`

**Arguments:** `state integer[], hypothetical integer`

**Returns:** `bigint`

**Owner:** `postgres`

**Language:** `sql`

**Volatility:** `immutable`

**Parallel:** `safe`

**Security:** `invoker`

**Null input:** called

**Leakproof:** no

**Returns set:** no

**Cost:** 100

```sql
CREATE OR REPLACE FUNCTION aggregates.hypothetical_position(state integer[], hypothetical integer)
 RETURNS bigint
 LANGUAGE sql
 IMMUTABLE PARALLEL SAFE
RETURN (SELECT (1 + count(*)) FROM unnest(hypothetical_position.state) value(value) WHERE (value.value < hypothetical_position.hypothetical))

```


### `aggregates.pick_integer(state integer[], fraction double precision)`

**Kind:** `ordinary`

**Arguments:** `state integer[], fraction double precision`

**Returns:** `integer`

**Owner:** `postgres`

**Language:** `sql`

**Volatility:** `immutable`

**Parallel:** `safe`

**Security:** `invoker`

**Null input:** called

**Leakproof:** no

**Returns set:** no

**Cost:** 100

```sql
CREATE OR REPLACE FUNCTION aggregates.pick_integer(state integer[], fraction double precision)
 RETURNS integer
 LANGUAGE sql
 IMMUTABLE PARALLEL SAFE
RETURN (SELECT value.value FROM unnest(pick_integer.state) value(value) ORDER BY value.value OFFSET LEAST((cardinality(pick_integer.state) - 1), GREATEST(0, (floor((pick_integer.fraction * ((cardinality(pick_integer.state) - 1))::double precision)))::integer)) LIMIT 1)

```


### `aggregates.total_combine(left_state bigint, right_state bigint)`

**Kind:** `ordinary`

**Arguments:** `left_state bigint, right_state bigint`

**Returns:** `bigint`

**Owner:** `postgres`

**Language:** `sql`

**Volatility:** `immutable`

**Parallel:** `safe`

**Security:** `invoker`

**Null input:** called

**Leakproof:** no

**Returns set:** no

**Cost:** 100

```sql
CREATE OR REPLACE FUNCTION aggregates.total_combine(left_state bigint, right_state bigint)
 RETURNS bigint
 LANGUAGE sql
 IMMUTABLE PARALLEL SAFE
RETURN (COALESCE(left_state, (0)::bigint) + COALESCE(right_state, (0)::bigint))

```


### `aggregates.total_final(state bigint)`

**Kind:** `ordinary`

**Arguments:** `state bigint`

**Returns:** `bigint`

**Owner:** `postgres`

**Language:** `sql`

**Volatility:** `immutable`

**Parallel:** `safe`

**Security:** `invoker`

**Null input:** called

**Leakproof:** no

**Returns set:** no

**Cost:** 100

```sql
CREATE OR REPLACE FUNCTION aggregates.total_final(state bigint)
 RETURNS bigint
 LANGUAGE sql
 IMMUTABLE PARALLEL SAFE
RETURN state

```


### `aggregates.total_inverse(state bigint, value integer)`

**Kind:** `ordinary`

**Arguments:** `state bigint, value integer`

**Returns:** `bigint`

**Owner:** `postgres`

**Language:** `sql`

**Volatility:** `immutable`

**Parallel:** `safe`

**Security:** `invoker`

**Null input:** called

**Leakproof:** no

**Returns set:** no

**Cost:** 100

```sql
CREATE OR REPLACE FUNCTION aggregates.total_inverse(state bigint, value integer)
 RETURNS bigint
 LANGUAGE sql
 IMMUTABLE PARALLEL SAFE
RETURN (COALESCE(state, (0)::bigint) - COALESCE(value, 0))

```


### `aggregates.total_step(state bigint, value integer)`

**Kind:** `ordinary`

**Arguments:** `state bigint, value integer`

**Returns:** `bigint`

**Owner:** `postgres`

**Language:** `sql`

**Volatility:** `immutable`

**Parallel:** `safe`

**Security:** `invoker`

**Null input:** called

**Leakproof:** no

**Returns set:** no

**Cost:** 100

```sql
CREATE OR REPLACE FUNCTION aggregates.total_step(state bigint, value integer)
 RETURNS bigint
 LANGUAGE sql
 IMMUTABLE PARALLEL SAFE
RETURN (COALESCE(state, (0)::bigint) + COALESCE(value, 0))

```


## Aggregates

### `aggregates.hypothetical_position(integer ORDER BY integer)`

Example hypothetical-set aggregate

**Kind:** `hypothetical_set`

**Arguments:** `integer ORDER BY integer`

**Owner:** `postgres`

**Returns:** `bigint`

**Direct arguments:** 1

**Transition function:** `aggregates.collect_integer(integer[],integer)`

**Transition type:** `integer[]`

**Transition space:** 0

**Final modify:** `read_write`

**Parallel:** `safe`

**Final function:** `aggregates.hypothetical_position(integer[],integer)`

**Initial condition:** `{}`



### `aggregates.integer_total(integer)`

Adds integers with ordinary, moving, and parallel aggregation support

**Kind:** `normal`

**Arguments:** `integer`

**Owner:** `postgres`

**Returns:** `bigint`

**Direct arguments:** 0

**Transition function:** `aggregates.total_step(bigint,integer)`

**Transition type:** `bigint`

**Transition space:** 0

**Final modify:** `shareable`

**Parallel:** `safe`

**Final function:** `aggregates.total_final(bigint)`

**Combine function:** `aggregates.total_combine(bigint,bigint)`

**Moving transition function:** `aggregates.total_step(bigint,integer)`

**Moving inverse function:** `aggregates.total_inverse(bigint,integer)`

**Moving final function:** `aggregates.total_final(bigint)`

**Moving transition type:** `bigint`

**Initial condition:** `0`

**Moving initial condition:** `0`

**Moving transition space:** 0

**Moving final modify:** `read_write`



### `aggregates.percentile_pick(double precision ORDER BY integer)`

Example ordered-set aggregate

**Kind:** `ordered_set`

**Arguments:** `double precision ORDER BY integer`

**Owner:** `postgres`

**Returns:** `integer`

**Direct arguments:** 1

**Transition function:** `aggregates.collect_integer(integer[],integer)`

**Transition type:** `integer[]`

**Transition space:** 0

**Final modify:** `read_write`

**Parallel:** `safe`

**Final function:** `aggregates.pick_integer(integer[],double precision)`

**Initial condition:** `{}`



## Object Privileges

### `schema public → PUBLIC USAGE`

**Object type:** `schema`

**Object:** `public`

**Grantor:** `pg_database_owner`

**Grantee:** `PUBLIC`

**Privilege:** `USAGE`



### `schema public → pg_database_owner CREATE`

**Object type:** `schema`

**Object:** `public`

**Grantor:** `pg_database_owner`

**Grantee:** `pg_database_owner`

**Privilege:** `CREATE`



### `schema public → pg_database_owner USAGE`

**Object type:** `schema`

**Object:** `public`

**Grantor:** `pg_database_owner`

**Grantee:** `pg_database_owner`

**Privilege:** `USAGE`



## Extensions

### `plpgsql`

PL/pgSQL procedural language

**Owner:** `postgres`

**Schema:** `pg_catalog`

**Version:** `1.0`

**Relocatable:** no

**Owned objects:** 4 (`function`: 3, `language`: 1)
