crates/backends/postgres/tests/snapshots/postgres__cluster_objects_markdown.snap
---
source: crates/backends/postgres/tests/postgres.rs
expression: markdown
---
# Database: `cluster`

## Database

### `dbmd_test_192898e476ea50ed`

**Owner:** `postgres`

**Encoding:** `UTF8`

**Locale provider:** `libc`

**LC_COLLATE:** `en_US.utf8`

**LC_CTYPE:** `en_US.utf8`

**Tablespace:** `pg_default`

**Template:** no

**Allows connections:** yes

**Connection limit:** -1



## Cluster Databases

### `dbmd_test_192898e476ea50ed`

**Owner:** `postgres`

**Encoding:** `UTF8`

**Locale provider:** `libc`

**LC_COLLATE:** `en_US.utf8`

**LC_CTYPE:** `en_US.utf8`

**Tablespace:** `pg_default`

**Template:** no

**Allows connections:** yes

**Connection limit:** -1



### `postgres`

default administrative connection database

**Owner:** `postgres`

**Encoding:** `UTF8`

**Locale provider:** `libc`

**LC_COLLATE:** `en_US.utf8`

**LC_CTYPE:** `en_US.utf8`

**Tablespace:** `pg_default`

**Template:** no

**Allows connections:** yes

**Connection limit:** -1



### `template0`

unmodifiable empty database

**Owner:** `postgres`

**Encoding:** `UTF8`

**Locale provider:** `libc`

**LC_COLLATE:** `en_US.utf8`

**LC_CTYPE:** `en_US.utf8`

**Tablespace:** `pg_default`

**Template:** yes

**Allows connections:** no

**Connection limit:** -1



### `template1`

default template for new databases

**Owner:** `postgres`

**Encoding:** `UTF8`

**Locale provider:** `libc`

**LC_COLLATE:** `en_US.utf8`

**LC_CTYPE:** `en_US.utf8`

**Tablespace:** `pg_default`

**Template:** yes

**Allows connections:** yes

**Connection limit:** -1



## Tablespaces

### `pg_default`

Cluster fixture default tablespace

**Owner:** `postgres`

**Location:** `<redacted>`

**Option:** `random_page_cost=1.1`



### `pg_global`

**Owner:** `postgres`

**Location:** `<redacted>`



## Namespaces

| Name | Owner | Comment |
|---|---|---|
| `public` | `pg_database_owner` | standard public schema |


## Roles

### `dbmd_cluster_app`

Cluster fixture login role

**Login:** yes

**Superuser:** no

**Inherit:** yes

**Create role:** no

**Create database:** no

**Replication:** no

**Bypass row-level security:** no

**Connection limit:** 5

**Password configured:** yes

**Valid until:** `2030-01-01 00:00:00+00`

**Configuration:** `statement_timeout=5s`

**Member of:** `dbmd_cluster_reader`; grantor `postgres`; admin yes; inherit no; set yes



### `dbmd_cluster_reader`

Cluster fixture read capability

**Login:** no

**Superuser:** no

**Inherit:** yes

**Create role:** no

**Create database:** no

**Replication:** no

**Bypass row-level security:** no

**Connection limit:** -1

**Password configured:** yes



## Role Database Settings

### `dbmd_cluster_app in dbmd_test_192898e476ea50ed`

**Setting:** `lock_timeout=2s`



## Object Privileges

### `database template0 → PUBLIC CONNECT`

**Object type:** `database`

**Object:** `template0`

**Grantor:** `postgres`

**Grantee:** `PUBLIC`

**Privilege:** `CONNECT`



### `database template0 → postgres CREATE`

**Object type:** `database`

**Object:** `template0`

**Grantor:** `postgres`

**Grantee:** `postgres`

**Privilege:** `CREATE`



### `database template0 → postgres CONNECT`

**Object type:** `database`

**Object:** `template0`

**Grantor:** `postgres`

**Grantee:** `postgres`

**Privilege:** `CONNECT`



### `database template0 → postgres TEMPORARY`

**Object type:** `database`

**Object:** `template0`

**Grantor:** `postgres`

**Grantee:** `postgres`

**Privilege:** `TEMPORARY`



### `database template1 → PUBLIC CONNECT`

**Object type:** `database`

**Object:** `template1`

**Grantor:** `postgres`

**Grantee:** `PUBLIC`

**Privilege:** `CONNECT`



### `database template1 → postgres CREATE`

**Object type:** `database`

**Object:** `template1`

**Grantor:** `postgres`

**Grantee:** `postgres`

**Privilege:** `CREATE`



### `database template1 → postgres CONNECT`

**Object type:** `database`

**Object:** `template1`

**Grantor:** `postgres`

**Grantee:** `postgres`

**Privilege:** `CONNECT`



### `database template1 → postgres TEMPORARY`

**Object type:** `database`

**Object:** `template1`

**Grantor:** `postgres`

**Grantee:** `postgres`

**Privilege:** `TEMPORARY`



### `schema public → PUBLIC USAGE`

**Object type:** `schema`

**Object:** `public`

**Grantor:** `pg_database_owner`

**Grantee:** `PUBLIC`

**Privilege:** `USAGE`



### `schema public → pg_database_owner USAGE`

**Object type:** `schema`

**Object:** `public`

**Grantor:** `pg_database_owner`

**Grantee:** `pg_database_owner`

**Privilege:** `USAGE`



### `schema public → pg_database_owner CREATE`

**Object type:** `schema`

**Object:** `public`

**Grantor:** `pg_database_owner`

**Grantee:** `pg_database_owner`

**Privilege:** `CREATE`



### `tablespace pg_default → dbmd_cluster_reader CREATE`

**Object type:** `tablespace`

**Object:** `pg_default`

**Grantor:** `postgres`

**Grantee:** `dbmd_cluster_reader`

**Privilege:** `CREATE`



### `tablespace pg_default → postgres CREATE`

**Object type:** `tablespace`

**Object:** `pg_default`

**Grantor:** `postgres`

**Grantee:** `postgres`

**Privilege:** `CREATE`



## Extensions

### `plpgsql`

PL/pgSQL procedural language

**Owner:** `postgres`

**Schema:** `pg_catalog`

**Version:** `1.0`

**Relocatable:** no

**Owned objects:** 4 (`function`: 3, `language`: 1)
