crates/backends/postgres/tests/snapshots/postgres__composite_types_markdown.snap
---
source: crates/backends/postgres/tests/postgres.rs
expression: markdown
---
# Database: `types`

## Database

### `dbmd_test_4ac682f0a5d3d4cb`

**Owner:** `postgres`

**Encoding:** `UTF8`

**Locale provider:** `libc`

**LC_COLLATE:** `en_US.utf8`

**LC_CTYPE:** `en_US.utf8`

**Tablespace:** `pg_default`

**Template:** no

**Allows connections:** yes

**Connection limit:** -1



## Namespaces

| Name | Owner | Comment |
|---|---|---|
| `public` | `pg_database_owner` | standard public schema |
| `types` | `postgres` | - |


## Composite Types

### `types.postal_address`

Reusable postal address

**Owner:** `type_owner`

**Attribute:** `street` `text`; collation `pg_catalog."C"`

**Attribute:** `city` `text`; collation `pg_catalog."default"`; Postal locality

**Attribute:** `postal_code` `character varying(12)`; collation `pg_catalog."default"`

```sql
CREATE TYPE "types"."postal_address" AS (
    "street" text COLLATE pg_catalog."C",
    "city" text COLLATE pg_catalog."default",
    "postal_code" character varying(12) COLLATE pg_catalog."default"
);
```


## Tables

### `types.contacts`

#### Columns

| Column | Type | Nullable | Default | Notes |
|---|---|---|---|---|
| `address` | `types.postal_address` | yes | - | storage `extended` |


#### PostgreSQL

**Kind:** `table`

**Owner:** `postgres`

**Persistence:** `permanent`

**Replica identity:** `default`

**Access method:** `heap`



## Object Privileges

### `schema public → PUBLIC USAGE`

**Object type:** `schema`

**Object:** `public`

**Grantor:** `pg_database_owner`

**Grantee:** `PUBLIC`

**Privilege:** `USAGE`



### `schema public → pg_database_owner CREATE`

**Object type:** `schema`

**Object:** `public`

**Grantor:** `pg_database_owner`

**Grantee:** `pg_database_owner`

**Privilege:** `CREATE`



### `schema public → pg_database_owner USAGE`

**Object type:** `schema`

**Object:** `public`

**Grantor:** `pg_database_owner`

**Grantee:** `pg_database_owner`

**Privilege:** `USAGE`



## Extensions

### `plpgsql`

PL/pgSQL procedural language

**Owner:** `postgres`

**Schema:** `pg_catalog`

**Version:** `1.0`

**Relocatable:** no

**Owned objects:** 4 (`function`: 3, `language`: 1)
