crates/backends/postgres/tests/snapshots/postgres__domains_markdown.snap
---
source: crates/backends/postgres/tests/postgres.rs
expression: markdown
---
# Database: `types`

## Database

### `dbmd_test_89574c3b2476e2a7`

**Owner:** `postgres`

**Encoding:** `UTF8`

**Locale provider:** `libc`

**LC_COLLATE:** `en_US.utf8`

**LC_CTYPE:** `en_US.utf8`

**Tablespace:** `pg_default`

**Template:** no

**Allows connections:** yes

**Connection limit:** -1



## Namespaces

| Name | Owner | Comment |
|---|---|---|
| `public` | `pg_database_owner` | standard public schema |
| `types` | `postgres` | - |


## Domains

### `types.email_address`

Canonical application email address

**Base type:** `text`

**Nullable:** no

**Owner:** `domain_owner`

**Collation:** `pg_catalog."C"`

**Default:** `''::text`

**Constraint:** `email_not_blocked`: `CHECK (VALUE <> 'blocked@example.com'::text) NOT VALID`; not validated

**Constraint:** `email_shape`: `CHECK (VALUE ~ '^[^@]+@[^@]+$'::text)`; Requires one at-sign

```sql
CREATE DOMAIN "types"."email_address"
    AS text
    COLLATE pg_catalog."C"
    DEFAULT ''::text
    NOT NULL
    CONSTRAINT "email_not_blocked" CHECK (VALUE <> 'blocked@example.com'::text) NOT VALID NOT VALID
    CONSTRAINT "email_shape" CHECK (VALUE ~ '^[^@]+@[^@]+$'::text);
```


## Tables

### `types.accounts`

#### Columns

| Column | Type | Nullable | Default | Notes |
|---|---|---|---|---|
| `email` | `types.email_address` | yes | - | collation `pg_catalog."C"`; storage `extended` |


#### PostgreSQL

**Kind:** `table`

**Owner:** `postgres`

**Persistence:** `permanent`

**Replica identity:** `default`

**Access method:** `heap`



## Object Privileges

### `schema public → PUBLIC USAGE`

**Object type:** `schema`

**Object:** `public`

**Grantor:** `pg_database_owner`

**Grantee:** `PUBLIC`

**Privilege:** `USAGE`



### `schema public → pg_database_owner CREATE`

**Object type:** `schema`

**Object:** `public`

**Grantor:** `pg_database_owner`

**Grantee:** `pg_database_owner`

**Privilege:** `CREATE`



### `schema public → pg_database_owner USAGE`

**Object type:** `schema`

**Object:** `public`

**Grantor:** `pg_database_owner`

**Grantee:** `pg_database_owner`

**Privilege:** `USAGE`



## Extensions

### `plpgsql`

PL/pgSQL procedural language

**Owner:** `postgres`

**Schema:** `pg_catalog`

**Version:** `1.0`

**Relocatable:** no

**Owned objects:** 4 (`function`: 3, `language`: 1)
